--- a/package.json
+++ b/package.json
@@ -3,20 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
+    "camel-case": "^3.0.0",
     "express": "^4.16.4",
+    "font-awesome": "^4.7.0",
+    "http-proxy-middleware": "^0.19.1",
     "jquery": "^3.3.1",
     "mongoose": "^5.4.19",
+    "node-sass": "^4.5.3",
     "node-sass-chokidar": "^1.3.4",
     "npm-run-all": "^4.1.5",
     "popper.js": "^1.14.3",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
+    "react-google-maps": "^9.4.5",
     "react-redux": "^6.0.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.8",
     "redux": "^4.0.1",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "titleize": "^2.0.0"
   },
   "scripts": {
     "build-css": "node-sass-chokidar ./src -o ./src",
@@ -36,5 +43,6 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {}
 }
