--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "bcrypt": "^3.0.5",
+    "body-parser": "^1.18.3",
     "bootstrap": "^4.3.1",
     "camel-case": "^3.0.0",
     "express": "^4.16.4",
     "font-awesome": "^4.7.0",
     "http-proxy-middleware": "^0.19.1",
     "jquery": "^3.3.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.4.19",
     "node-sass": "^4.5.3",
     "node-sass-chokidar": "^1.3.4",
