--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "http-proxy-middleware": "^0.19.1",
     "jquery": "^3.3.1",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.24.0",
     "mongoose": "^5.4.19",
     "node-sass": "^4.5.3",
     "node-sass-chokidar": "^1.3.4",
@@ -25,6 +26,7 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.8",
     "redux": "^4.0.1",
+    "redux-form": "^8.1.0",
     "redux-thunk": "^2.3.0",
     "titleize": "^2.0.0"
   },
