Adds booking component and booking creation functionality. Adds toast messages and confirmation modal

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "bcrypt": "^3.0.5",
     "body-parser": "^1.18.3",
     "bootstrap": "^4.3.1",
+    "bootstrap-daterangepicker": "^2.1.30",
     "camel-case": "^3.0.0",
     "express": "^4.16.4",
     "font-awesome": "^4.7.0",
@@ -20,11 +21,14 @@
     "npm-run-all": "^4.1.5",
     "popper.js": "^1.14.3",
     "react": "^16.8.4",
+    "react-bootstrap-daterangepicker": "^4.1.0",
     "react-dom": "^16.8.4",
     "react-google-maps": "^9.4.5",
     "react-redux": "^6.0.1",
+    "react-responsive-modal": "^3.6.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.8",
+    "react-toastify": "^5.0.0-rc.3",
     "redux": "^4.0.1",
     "redux-form": "^8.1.0",
     "redux-thunk": "^2.3.0",
