--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "bookwithme-app-react",
   "version": "0.1.0",
+  "engines": {
+    "node": "10.15.0",
+    "npm": "6.4.1"
+  },
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
@@ -35,10 +39,12 @@
     "titleize": "^2.0.0"
   },
   "scripts": {
+    "heroku-postbuild": "npm run build",
     "build-css": "node-sass-chokidar ./src -o ./src",
     "watch-css": "npm run build-css && node-sass-chokidar ./src -o ./src --watch --recursive",
     "start-js": "react-scripts start",
-    "start": "npm-run-all -p watch-css start-js",
+    "start": "npm start --prefix server",
+    "start-dev": "npm-run-all -p watch-css start-js",
     "build-js": "react-scripts build",
     "build": "npm-run-all -p build-css build-js",
     "test": "react-scripts test",
